--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -150,6 +150,124 @@ Hello, <%= session[:cas_user] %>!
 			  </div>
 			</div>
 		  </li>
+
+		    <li class="panel">
+		  	
+		  	<% if  @deposit_available == 1 && @deposit_complete== 0 %>
+				<a href="#step-1A" class="collapsed step-title incomplete" data-parent="#checkoutsteps" data-toggle="collapse" id="deposittitle">
+			<% elsif  (@deposit_available == 1 && @deposit_complete == 1 ) || @deposit_bypass == 1 %>
+				<a href="#step-1A" class="collapsed step-title complete" data-parent="#checkoutsteps" data-toggle="collapse" id="deposittitle">
+			<% else %>
+				<a href="#step-1A" class="collapsed step-title disabled" data-parent="#checkoutsteps" data-toggle="" id="deposittitle">
+			<% end %>
+
+
+			  <div class="number"><!-- Step 2 --><%= get_statusicon(@deposit_available, @deposit_complete, @deposit_bypass) %> </div>
+			  <h6>International Student Visa Processing</h6>
+			</a>
+			
+			<div id="step-1A" class="collapse">
+			  <div class="step-content">
+			  	<h3 class="title">International Student Visa Processing</h3>
+			 
+						<% if @deposit_bypass == 1 %>			  		
+							<p> An administrator has bypassed (overridden) this section for you.</p>
+						<% else %>
+
+					  		<p>Congratulations and Welcome to FAU! International students who wish to study in the U.S. must obtain the appropriate visa classification in order to engage in full-time study (F-1 visa or J-1 visa). International Student and Scholar Services (ISSS) assists international students in obtaining the Certification of Eligibility (I-20 or DS-2019), required to obtain the F-1 or J-1 visa classification.</p> 
+							
+							<p>If you have any questions pertaining to the information below, email <a href="mailto:ISSSAdmissionDocs@fau.edu">ISSSAdmissionDocs@fau.edu</a> </p>
+
+							<p><strong>Submit the documentation below in order to obtain your I-20 or DS-2019:</strong></p>
+							<ol>
+							  <li><a href="http://www.fau.edu/isss/forms/FCF_UG2.pdf" target="_blank">Financial Certification Form (FCF)</a>: Complete and sign the FCF; use multiple copies of page 3 if you have more than one sponsor. Provide a complete foreign address on all forms.</li>
+							  <li><strong>Proof of financial support: bank letters or other financial documents must be in English or accompanied by an English translation</strong>. Financial support can be from the student, the student's sponsor (parent, relative, etc.), FAU, government agency, or other sponsoring entity.</li>
+							  <li><strong>Copy of passport page</strong> (biographical information and expiration date) for student and any accompanying dependents (spouse/children).</li>
+							
+							  <br><p><b>IF YOU ARE TRANSFERRING FROM ANOTHER INSTITUTION IN THE UNITED STATES, MUST ALSO SUBMIT THE FOLLOWING DOCUMENTS:</b></p>
+						  
+							  <li><a href="http://www.fau.edu/isss/forms/SEVIS%20Transfer%20Form.pdf" target="_blank">SEVIS Transfer Form (STF)</a>: complete part 1 of STF and submit to the Designated School Official (usually the International Student Advisor) for completion and signature of STF part 2, at the institution which currently holds your I-20.</li>
+							</ol>
+
+							<div align="center">
+								<br><p><h5>INFORMATION FOR OTHER STUDENTS WITH NON-IMMIGRANT CLASSIFICATIONS</h5></p>
+							</div>
+
+							<p>If you currently hold another non-immigrant visa classification (for example, B-1/B-2, F-2, H-4, L-2, E-2, etc.) and wish to request a change of status to F-1 or J-1, email <a href="mailto:isss@fau.edu">isss@fau.edu</a> for an appointment (in-person or via phone/skype) with an ISSS advisor.</p>
+
+							<p>If you are applying for permanent residence (‘green card’) or hold other types of immigration classifications (i.e., Deferred Action, political asylum, temporary protected status, etc.) you do not need to supply documentation to ISSS. Please contact Admissions directly at <a href="mailto:admissions@fau.edu">admissions@fau.edu</a>. Once your record is updated with the appropriate information, you will no longer see the International Student Visa Processing information in your account.</p>
+
+	
+			   			  <% end %>
+
+                         <div class="buttons-box text-right">
+						  <button type="button" class="btn btn-danger" id="depositBut">Continue</button>						 
+						</div>
+				
+				<!-- <form class="row no-margin">
+				  <div class="col-sm-6 col-md-6">
+					<label>First Name: <span class="required">*</span></label>
+					<input class="form-control" type="text">
+				  </div>
+				  <div class="col-sm-6 col-md-6">
+					<label>Last Name: <span class="required">*</span></label>
+					<input class="form-control" type="text">
+				  </div>
+				  
+				  <div class="clearfix"></div>
+				  
+				  <div class="col-sm-6 col-md-6">
+					<label>Company:</label>
+					<input class="form-control" type="text">
+				  </div>
+				  <div class="col-sm-6 col-md-6">
+					<label>Email Address: <span class="required">*</span></label>
+					<input class="form-control" type="text">
+				  </div>
+				  
+				  <div class="clearfix"></div>
+				  
+				  <div class="col-sm-6 col-md-6">
+					<label>Address: <span class="required">*</span></label>
+					<input class="form-control" type="text">
+				  </div>
+				  <div class="col-sm-6 col-md-6">
+					<label>City</label>
+					<input class="form-control" type="text">
+				  </div>
+				  
+				  <div class="clearfix"></div>
+				  
+				  <div class="col-sm-6 col-md-6">
+					<label>Telephone: <span class="required">*</span></label>
+					<input class="form-control" type="text">
+				  </div>
+				  <div class="col-sm-6 col-md-6">
+					<label>Fax:</label>
+					<input class="form-control" type="text">
+				  </div>
+				  
+				  <div class="clearfix"></div>
+				  
+				  <div class="col-sm-6 col-md-6">
+					<label>Password: <span class="required">*</span></label>
+					<input class="form-control" type="text">
+				  </div>
+				  <div class="col-sm-6 col-md-6">
+					<label>Confirm Password: <span class="required">*</span></label>
+					<input class="form-control" type="text">
+				  </div>
+				  
+				  <div class="clearfix"></div>
+				  
+				  <div class="col-sm-12 buttons-box text-right">
+					<button type="button" class="btn btn-danger">Continue</button>
+					<span class="required"><b>*</b> Required Field</span>
+				  </div>
+				</form> -->
+			  </div>
+			</div>
+		  </li>
 		  
 		  <li class="panel">
 		  	
