fixed loading message fade in spacing issuesgit add .!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,6 +75,7 @@
   width: 18px;
   height: 18px;
   background-color: #003366;
+  color: #FFF;
   border-radius: 100%;
   display: inline-block;
   -webkit-animation: sk-threeBounceDelay 1.4s infinite ease-in-out;
