--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -9,20 +9,17 @@ Hello, <%= session[:cas_user] %>!
 
  	
 
+	
+ <div id="cover" class="sk-spinner sk-spinner-three-bounce" style="width: 100%; height: 100%; position: absolute; align:center;">
+    <span id="loadingmessage"><h4>Welcome to Florida Atlantic University</h4></span><br>
+  	<div class="sk-bounce1"></div>
+  	<div class="sk-bounce2"></div>
+  	<div class="sk-bounce3"></div>	 
+</div>
+	     
 
 <div class="page-box" >
-
-	<p>
-	 <div id="cover" class="sk-spinner sk-spinner-three-bounce" style="width: 90%;">
-      <span id="loadingmessage"><h4>Welcome to Florida Atlantic University</h4></span><br>
-      <div class="sk-bounce1"></div>
-      <div class="sk-bounce2"></div>
-      <div class="sk-bounce3"></div>
-    </div>
-	</p>      
-
   <div class="page-box-content"> 
-  
 
 	<div id="top-box">
 	 
@@ -108,7 +105,7 @@ Hello, <%= session[:cas_user] %>!
 					
 					<a name="raptors"></a>
 
-					<p>Congratulations on your acceptance to Florida Atlantic University.  We are so excited to have you join the Class of 2019!  This is an exciting time, with lots of steps to prepare for your first day on campus.  Please read through these pages carefully, as there is a lot of information to know before you arrive on campus. <a title="Welcome to FAU!" href="#divForm" class="lightbox" id="btnForm">[More Information]</a></p>
+					<p>Congratulations on your acceptance to Florida Atlantic University for <%= @term_display %> <%= @year_display %>!  We are so excited to have you join the Owl family!  This is an exciting time, with lots of steps to prepare for your first day on campus.  Please read through these pages carefully, as there is a lot of information to know before you arrive on campus. <a title="Welcome to FAU!" href="#divForm" class="lightbox" id="btnForm">[More Information]</a></p>
 
 					<!-- <p>
 						<a href="#divForm" class="gallery-images" id="btnForm">[More Information]</a>
@@ -798,10 +795,10 @@ Hello, <%= session[:cas_user] %>!
 			  				<p>
 			  					<ol>
 			  						<li><a href="http://fafsa.gov" target="_blank">Complete your Free Application for Federal Student Aid at FAFSA.gov</a> </li>
-			  						<li><a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=bwrkelig.P_DisplayTabs?tab_type=ER&aidy_in=1415&calling_proc_name=bwrksumm.P_DispSumm" target="_blank">Eligibility Requirements</a></li>
+			  						<li><a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=bwrkelig.P_DisplayTabs?tab_type=ER&aidy_in=<%=@finaidyear%>&calling_proc_name=bwrksumm.P_DispSumm" target="_blank">Eligibility Requirements</a></li>
 			  						<li>Complete Your Financial Aid Package</li>
-			  						<li><a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=bwrkrhst.P_DisplayTabs?tab_type=TC&aidy_in=1415&calling_proc_name=bwrksumm.P_DispSumm" target="_blank">Terms & Conditions - prompt for award year?</a></li>
-			  						<li><a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=bwrkrhst.P_DisplayTabs?tab_type=AA&aidy_in=1415&calling_proc_name=bwrksumm.P_DispSumm" target="_blank">Accept Your Financial Aid Package</a></li>
+			  						<li><a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=bwrkrhst.P_DisplayTabs?tab_type=TC&aidy_in=<%=@finaidyear%>&calling_proc_name=bwrksumm.P_DispSumm" target="_blank">Terms & Conditions</a></li>
+			  						<li><a href="https://sctformsalt.fau.edu:8484/ssomanager/c/SSB?pkg=bwrkrhst.P_DisplayTabs?tab_type=AA&aidy_in=<%=@finaidyear%>&calling_proc_name=bwrksumm.P_DispSumm" target="_blank">Accept Your Financial Aid Package</a></li>
 			  					</ol>
 			  				</p>
 
@@ -837,7 +834,7 @@ Hello, <%= session[:cas_user] %>!
 					  			<table class="table table-striped text-left order-details">
 						  			<thead>
 						  				<tr>
-						  					<th class="product-name">Award</th><th class="product-total">Term</th><th class="product-total">Amount</th><th class="product-total">Offer Date</th>
+						  					<th class="product-name">Award</th><th class="product-total">Amount</th><th class="product-total">Offer Date</th>
 						  				</tr>
 						  			</thead>
 
