--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -9,12 +9,23 @@ Hello, <%= session[:cas_user] %>!
 
  	
 
-	
+<!-- 	
  <div id="cover" class="sk-spinner sk-spinner-three-bounce" style="width: 100%; height: 100%; position: absolute; align:center;">
     <span id="loadingmessage"><h4>Welcome to Florida Atlantic University</h4></span><br>
   	<div class="sk-bounce1"></div>
   	<div class="sk-bounce2"></div>
   	<div class="sk-bounce3"></div>	 
+</div> -->
+
+<div align="center">
+	<div id="cover" class="spinner" style="position: absolute;">
+	  <span id="loadingmessage"><h4>Welcome to Florida Atlantic University</h4></span><br>	
+	  <div class="rect1"></div>
+	  <div class="rect2"></div>
+	  <div class="rect3"></div>
+	  <div class="rect4"></div>
+	  <div class="rect5"></div>
+	</div>
 </div>
 	     
 
