revamped admin dashboard and other fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,9 @@
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.css">
 
+  <%= javascript_include_tag 'ckeditor/ckeditor.js' %>
+  
+
   <!-- Theme CSS -->
   <%= stylesheet_link_tag "css/style.css" %>
 
